--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "antd": "^4.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "selenium-webdriver": "^4.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "build": "react-scripts  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
