--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@ant-design/charts": "^1.3.6",
     "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^6.4.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
     "@testing-library/react": "^13.3.0",
     "antd": "^4.21.3",
     "react": "^18.2.0",
@@ -18,9 +21,9 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "react-scripts  build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "craco  build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "cracoConfig": "craco.config.js"
+  "cracoConfig": "craco.config.js",
+  "devDependencies": {
+    "webpack-cli": "^4.10.0"
+  }
 }
