--- a/src/frontend/react/package.json
+++ b/src/frontend/react/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.3.0",
     "antd": "^4.21.3",
     "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
@@ -25,7 +26,7 @@
     "build": "react-scripts  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "automation-test": "mocha --no-timeouts 'src/testing/AutomatedTests/Selenium/*.js'"
+    "automation-test": "mocha --no-timeouts src/testing/AutomatedTests/Selenium/*.js --reporter mochawesome"
   },
   "eslintConfig": {
     "extends": [
