--- a/src/frontend/react/.env
+++ b/src/frontend/react/.env
@@ -1,1 +1,3 @@
-//
+REACT_APP_API_KEY=911c1998697d9c3b0c70614b81d4b633
+REACT_APP_PRODUCTION_BASE_URL=https://fractalboilerplate.com
+REACT_APP_TEST_BASE_URL=https://52.165.147.19/
