--- a/src/frontend/react/package.json
+++ b/src/frontend/react/package.json
@@ -8,7 +8,8 @@
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.8.6",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "@mui/styles": "^5.8.7",
     "@testing-library/react": "^13.3.0",
     "antd": "^4.21.3",
