--- a/src/frontend/react/.env
+++ b/src/frontend/react/.env
@@ -1,3 +1,7 @@
 REACT_APP_API_KEY=911c1998697d9c3b0c70614b81d4b633
 REACT_APP_PRODUCTION_BASE_URL=https://fractalboilerplate.com
 REACT_APP_TEST_BASE_URL=https://52.165.147.19/
+
+Client_id=6BRUKBpfCJcDfBsSugnaLR2xeGWFjL5OpzhS6dOP
+Client_secret=pbkdf2_sha256$320000$AtvQRk4ChfsfsjOWYFE6U8$9Q2M87gI5XIDAwIdZMpz36c682sKh2hx1wj4SJZaBUc
+grant_type=Confidential
